tests/error/type_match/base_case_slice_const_propagation1.bz
// error: unable to match type 'mut *mut int32' to 'mut *int32'
// note: mismatched mutability of types 'mut int32' and 'int32'
// note: while matching expression of type '[: mut *mut int32]' to '[: mut *int32]'
function test()
{
	let _: [: mut *int32] = [: mut *mut int32]();
}
